fixing the color and contrast

--- a/ui-refactoring/index.css
+++ b/ui-refactoring/index.css
@@ -138,4 +138,9 @@ main {
     border: 1px solid white;
 }
 /* Your Fixes Below */
-
+body {
+  background: #303A52;
+}
+nav {
+  background: #2C354A;
+}
